[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mineru[core]",
    "minio>=7.2.20",
    "openai>=2.44.0",
    "pymilvus>=3.0.0",
    "redis>=8.0.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.2",
    "psycopg[binary]>=3.2",
]

[project.scripts]
rag = "rag_system.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_system"]

[tool.uv.sources]
mineru = { path = "../MinerU", editable = true }
